--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class="brand">RetryIX AGI Inc</div>
 <div style="display:flex;gap:10px">
 <button class="pill" id="lang">EN</button>
-<a class="pill" href="https://github.com/Retryixagi" rel="noopener" target="_blank">GitHub</a>
+<a class="pill" data-en="RetryIX GitHub Repository" data-zh="RetryIX GitHub 倉庫" href="https://github.com/Retryixagi" rel="noopener" target="_blank">RetryIX GitHub 倉庫</a>
 </div>
 </nav>
 <!-- Hero Banner -->
@@ -114,21 +114,21 @@
 <p class="mono" data-en="RAID-inspired memory layout for zero-copy &amp; bandwidth aggregation." data-zh="以 RAID 思維重構記憶體佈局，達成零拷貝與帶寬聚合。">
           以 RAID 思維重構記憶體佈局，達成零拷貝與帶寬聚合。
         </p>
-<a href="https://github.com/ixu2486/memory_raid_engine" rel="noopener" target="_blank">GitHub →</a>
+<a data-en="RetryIX GitHub Repository" data-zh="RetryIX GitHub 倉庫" href="https://github.com/Retryixagi" rel="noopener" target="_blank">RetryIX GitHub 倉庫</a>
 </div>
 <div class="card">
 <h2>GGUF Cognitive Bridge</h2>
 <p class="mono" data-en="Couples offline GGUF with semantic repair engine for stable cognition." data-zh="離線 GGUF 與語義修復引擎耦合，提供穩定的認知殘差回饋。">
           離線 GGUF 與語義修復引擎耦合，提供穩定的認知殘差回饋。
         </p>
-<a href="https://github.com/ixu2486" rel="noopener" target="_blank">Repository Index →</a>
+<a data-en="RetryIX GitHub Repository" data-zh="RetryIX GitHub 倉庫" href="https://github.com/Retryixagi" rel="noopener" target="_blank">RetryIX GitHub 倉庫</a>
 </div>
 <div class="card">
 <h2>Semantic-HFT-ASI</h2>
 <p class="mono" data-en="10-layer semantic field × low-latency hedging engine, &lt;200ms loop." data-zh="十層語義場 × 低延遲對沖引擎，&lt;200ms 閉環。">
           十層語義場 × 低延遲對沖引擎，&lt;200ms 閉環。
         </p>
-<a href="https://github.com/ixu2486" rel="noopener" target="_blank">Docs →</a>
+<a data-en="RetryIX GitHub Repository" data-zh="RetryIX GitHub 倉庫" href="https://github.com/Retryixagi" rel="noopener" target="_blank">RetryIX GitHub 倉庫</a>
 </div>
 </section>
 <section class="card" style="margin-top:16px">
@@ -147,6 +147,24 @@
 <p class="mono">✉️ <a href="mailto:ixu@retryix.com">ixu@retryix.com</a></p>
 <p class="mono">🌐 <a href="https://retryixagi.com" rel="noopener" target="_blank">retryixagi.com</a></p>
 </section>
+<section class="card" style="margin-top:16px">
+<h2 data-en="Module Progress &amp; Alignment Milestones" data-zh="技術模塊現況與對齊實作成果">技術模塊現況與對齊實作成果</h2>
+<p class="mono" data-en="RetryIX AGI has completed two semantic memory-based encoding modules: 4MB with 512B×8 alignment, and 8MB with 64B×64 stacking — both achieving 4096B hardware alignment with validated 100-round stability." data-zh="RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。">
+     RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。
+  </p>
+<p class="mono" data-en="Full source code and implementation details are available on GitHub:" data-zh="完整原始碼與實作細節可在下列 GitHub 倉庫取得：">
+    完整原始碼與實作細節可在下列 GitHub 倉庫取得：
+    <a href="https://github.com/Retryixagi/RetryIX-OpenCL2.0-51" target="_blank">RetryIX-OpenCL2.0-51</a> /
+    <a href="https://github.com/Retryixagi/2025_OpenCL2.0" target="_blank">2025_OpenCL2.0</a>
+</p>
+</section>
+<section class="card" style="margin-top:16px">
+<h2 data-en="Taiwanese Origin Statement" data-zh="台灣聲明與地緣政治澄清">台灣聲明與地緣政治澄清</h2>
+<p class="mono" data-en="RetryIX AGI is a local technical team based in Taiwan. All source code is developed, tested, and deployed in Taiwan. We have no ties to Mainland China in business or politics — ensuring full neutrality and collaboration transparency." data-zh="RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。">
+     RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。
+  </p>
+</section>
+
 <section class="card" style="margin-top:16px">
 <h2 data-en="Module Progress &amp; Alignment Milestones" data-zh="技術模塊現況與對齊實作成果">技術模塊現況與對齊實作成果</h2>
 <p class="mono" data-en="RetryIX AGI has completed two semantic memory-based encoding modules: 4MB with 512B×8 alignment, and 8MB with 64B×64 stacking — both achieving 4096B hardware alignment with validated 100-round stability." data-zh="RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。">
