--- a/index.html
+++ b/index.html
@@ -158,30 +158,15 @@
     <a href="https://github.com/Retryixagi/2025_OpenCL2.0" target="_blank">2025_OpenCL2.0</a>
 </p>
 </section>
-<section class="card" style="margin-top:16px">
+<section class="card" style="height: 25%; overflow: hidden; font-size: 0.85rem;">
 <h2 data-en="Taiwanese Origin Statement" data-zh="台灣聲明與地緣政治澄清">台灣聲明與地緣政治澄清</h2>
-<p class="mono" data-en="RetryIX AGI is a local technical team based in Taiwan. All source code is developed, tested, and deployed in Taiwan. We have no ties to Mainland China in business or politics — ensuring full neutrality and collaboration transparency." data-zh="RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。">
-     RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。
-  </p>
+<p class="mono" data-en="RetryIX AGI is a local technical team based in Taiwan. All source code is developed, tested, and deployed in Taiwan. We have no ties to Mainland China in business or politics — ensuring full neutrality and collaboration transparency." data-zh="RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。">台灣聲明與地緣政治澄清
+
+     RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，並無任何業務或政治聯繫，敬請各界放心合作與使用。</p>
 </section>
 
-<section class="card" style="margin-top:16px">
-<h2 data-en="Module Progress &amp; Alignment Milestones" data-zh="技術模塊現況與對齊實作成果">技術模塊現況與對齊實作成果</h2>
-<p class="mono" data-en="RetryIX AGI has completed two semantic memory-based encoding modules: 4MB with 512B×8 alignment, and 8MB with 64B×64 stacking — both achieving 4096B hardware alignment with validated 100-round stability." data-zh="RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。">
-     RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。
-  </p>
-<p class="mono" data-en="Full source code and implementation details are available on GitHub:" data-zh="完整原始碼與實作細節可在下列 GitHub 倉庫取得：">
-    完整原始碼與實作細節可在下列 GitHub 倉庫取得：
-    <a href="https://github.com/Retryixagi/RetryIX-OpenCL2.0-51" target="_blank">RetryIX-OpenCL2.0-51</a> /
-    <a href="https://github.com/Retryixagi/2025_OpenCL2.0" target="_blank">2025_OpenCL2.0</a>
-</p>
-</section>
-<section class="card" style="margin-top:16px">
-<h2 data-en="Taiwanese Origin Statement" data-zh="台灣聲明與地緣政治澄清">台灣聲明與地緣政治澄清</h2>
-<p class="mono" data-en="RetryIX AGI is a local technical team based in Taiwan. All source code is developed, tested, and deployed in Taiwan. We have no ties to Mainland China in business or politics — ensuring full neutrality and collaboration transparency." data-zh="RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。">
-     RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。
-  </p>
-</section>
+
+
 <footer class="foot">
 <div>© <span id="y"></span> RetryIX AGI Inc</div>
 <div class="mono" data-en="Next-gen intelligence powered by semantic memory" data-zh="以語義記憶體驅動的下一代智能">
