--- a/index.html
+++ b/index.html
@@ -152,10 +152,9 @@
 <p class="mono" data-en="RetryIX AGI has completed two semantic memory-based encoding modules: 4MB with 512B×8 alignment, and 8MB with 64B×64 stacking — both achieving 4096B hardware alignment with validated 100-round stability." data-zh="RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。">
      RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。
   </p>
-<p class="mono" data-en="Full source code and implementation details are available on GitHub:" data-zh="完整原始碼與實作細節可在下列 GitHub 倉庫取得：">
-    完整原始碼與實作細節可在下列 GitHub 倉庫取得：
-    <a href="https://github.com/Retryixagi/RetryIX-OpenCL2.0-51" target="_blank">RetryIX-OpenCL2.0-51</a> /
-    <a href="https://github.com/Retryixagi/2025_OpenCL2.0" target="_blank">2025_OpenCL2.0</a>
+<p class="mono" data-en="Full source code and implementation details are available on GitHub:" data-zh="完整原始碼與實作細節可在下列 GitHub 倉庫取得：">完整原始碼與實作細節可在下列 GitHub 倉庫取得：
+                    <a href="https://github.com/Retryixagi/RetryIX-OpenCL2.0-51" target="_blank">RetryIX-OpenCL2.0-51</a> /
+                    <a href="https://github.com/Retryixagi/2025_OpenCL2.0" target="_blank">2025_OpenCL2.0</a>
 </p>
 </section>
 <section class="card" style="height: 25%; overflow: hidden; font-size: 0.85rem;">
