Update semantic memory module descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 </section>
 <section class="card" style="margin-top:16px">
 <h2 data-en="Module Progress &amp; Alignment Milestones" data-zh="技術模塊現況與對齊實作成果">技術模塊現況與對齊實作成果</h2>
-<p class="mono" data-en="RetryIX AGI has completed two semantic memory-based encoding modules: 4MB with 512B×8 alignment, and 8MB with 64B×64 stacking — both achieving 4096B hardware alignment with validated 100-round stability." data-zh="RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。">
+<p class="mono" data-en="RetryIX AGI has completed two semantic memory-based encoding modules: 4MB with 4096B alignment, and 8MB with 4096B stacking — both achieving 4096B hardware alignment with validated 100-round stability." data-zh="RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。">
      RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 4096B 對齊策略、以及 8MB 4096B 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。
   </p>
 <p class="mono" data-en="Full source code and implementation details are available on GitHub:" data-zh="完整原始碼與實作細節可在下列 GitHub 倉庫取得：">完整原始碼與實作細節可在下列 GitHub 倉庫取得：
